--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -50,6 +50,15 @@
     padding-top: 1.5rem;
     padding-bottom: 0.5rem;
   }
+
+  // & in mobile media query
+  @media (max-width: 767px) {
+    font-size: 1.75rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    // larger shadow
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .project-category-group {
